Projects/LuxeCart/LuxeCart_v1/luxecart-k8s/old/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
